--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angular-in-memory-web-api": "^0.17.0",
     "express": "^4.18.2",
     "gamestore": "file:",
+    "ngx": "^2.4.0",
+    "ngx-spinner": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
