--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angular-in-memory-web-api": "^0.17.0",
     "express": "^4.18.2",
     "gamestore": "file:",
+    "jquery": "^3.7.1",
+    "json-server": "^1.0.0-beta.3",
     "ngx": "^2.4.0",
     "ngx-spinner": "^17.0.0",
     "rxjs": "~7.8.0",
